# Tri3Repo

./: APFinalPrep.md  LICENSE  README.md  amongus.py  createtask.md  datalists.py  datastructures.md  fibonacci.py  index.md  keypad.py  main.py  pyproject.toml  reviewticket.md  reviewtickets.md  ship.py  swap.py  testprep.md  tree.py
_includes/: navbar.html  navbar.md
python/: main.py
python/week0/: swap.py  tree.py
python/week1/: datalists.py  fibonacci.py
python/week2/: factorial.py  fibonacci_class.py  imperative_math.py  oop_math.py
