[tool.poetry]
name = "repl_python3_beta_Tri3Repo"
version = "0.1.0"
description = ""
authors = ["IsaacLe2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
functions = "^0.7.0"
funcy = "^1.17"
mathpy = "^0.3.0"
patterns = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
